--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="nbpro.html">NBPRO</a>
+    <a href="asistencia.html">ASISTENCIA</a>
 
     
     
