--- a/nbpro.html
+++ b/nbpro.html
@@ -63,7 +63,7 @@
           </div>
           <div class="modal-body" id="fileList"></div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-danger mt-3" data-dismiss="modal">Cerrar</button>
           </div>
         </div>
       </div>
