--- a/index.html
+++ b/index.html
@@ -1,19 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBPRo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/public/Logo NBP corto 15.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Altas</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="shortcut icon" href="/public/Logo NBP corto 15.png" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-   
-    <footer class="footer">
-        <p>NBPro© 2023 - Todos los Derechos Reservados</p>
-      </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+  <header>
+    <div class="container d-flex align-items-center justify-content-center py-5">
+      <img class="img-fluid my-3" width="300" src="public/Copia de NBP bordo.JPG" alt="logo"></img>
+    </div>
+    <h1 class="text-center display-4 mb-5 font-weight-bold">Formularios de Altas</h1>
+  </header>
+  <main>
+    <div class="contenedor">
+      <div class="row" id="cardContainer">
+        <!-- Primera tarjeta -->
+<div class="card-container borde">
+  <div class="image-container">
+    <img class="logo-img" src="public/requisitos.png" alt="" />
+  </div>
+  <div class="button-container">
+    <button type="button" class="custom-button" data-tipo="info" id="botonModal">INFO</button>
+  </div>
+</div>
+
+<!-- Segunda tarjeta -->
+<div class="card-container borde">
+  <div class="image-container">
+    <img class="logo-img" src="public/NBP bordo.JPG" alt="" />
+  </div>
+  <div class="button-container">
+    <button type="button" class="custom-button" data-tipo="designaciones" id="botonModal">DESIGNACIONES</button>
+  </div>
+</div>
+
+<!-- Tercera tarjeta -->
+<div class="card-container borde">
+  <div class="image-container">
+    <img class="logo-img" src="public/contactos.jpg" alt="" />
+  </div>
+  <div class="button-container">
+    <button type="button" class="custom-button" data-tipo="contacto" id="botonModal">CONTACTO</button>
+  </div>
+</div>
+
+      </div>
+    </div>
+    <div class="modal fade" id="fileModal" tabindex="-1" role="dialog" aria-labelledby="fileModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="fileModalLabel">Archivos de la Aseguradora</h5>
+
+          </div>
+          <div class="modal-body" id="fileList"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-danger mt-3" data-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="modalOverlay" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-xl">
+        <div class="modal-content">
+          <div class="modal-body" id="modalBody">
+            <!-- Contenido del modal -->
+            <!-- Se actualizará con el contenido específico de cada tarjeta -->
+            <button class="btn btn-danger mt-3" onClick="closeModal()">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </main>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="script.js"></script>
 </body>
+<footer class="footer">
+  <p>NBPro© 2023 - Todos los Derechos Reservados</p>
+</footer>
+
 </html>
